--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -70,6 +70,7 @@
                     <figure>
                         <img src="img/destaque-home.png" alt="Promoção: Big City Night">
                     </figure>
+                    <a href="#" class="pause"></a>
                 </section>
                 <!-- fim .banner-destaque -->
 
@@ -218,5 +219,7 @@
                 </div>
             </footer>
         
+            <script src="js/banner.js"></script>
+
     </body>
 </html>
