--- a/mirrorfashion/sobre.html
+++ b/mirrorfashion/sobre.html
@@ -81,6 +81,9 @@
     </p>
 
     <h2 id="diferenciais">Diferenciais</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tb06abHE4hY" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen></iframe>
     <ul>
       <li>Menor preço do varejo, garantido</li>
       <li>Se você achar uma loja mais barata, leva o produto de graça</li>
