--- a/mirrorfashion/checkout.html
+++ b/mirrorfashion/checkout.html
@@ -138,7 +138,7 @@
                             <div class="form-group">
                                 <label for="cpf">CPF</label>
                                 <input type="text" class="form-control" id="cpf" name="cpf" 
-                                placeholder="000.000.000-00" required>
+                                placeholder="000.000.000-00" data-mask="999.999.999-99" required>
                             </div>
 
                             <div class="form-group custom-control custom-checkbox">
@@ -155,7 +155,8 @@
 
                             <div class="form-group">
                                 <label for="numero-cartao">Número - CVV</label>
-                                <input type="text" class="form-control" id="numero-cartao" name="numero-catao">
+                                <input type="text" class="form-control" id="numero-cartao" 
+                                name="numero-catao" data-mask="9999 9999 9999 9999 - 999">
                             </div>
 
                             <div class="form-group">
@@ -192,9 +193,10 @@
 
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script src="js/inputmask-plugin.js"></script>
 
 
         <script src="js/total.js"></script>
     </body>
 </html>
-<!-- 189 -->
+<!-- 223 -->
