--- a/mirrorfashion/index.html
+++ b/mirrorfashion/index.html
@@ -138,7 +138,63 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura7.png" alt="miniatura7">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura8.png" alt="miniatura8">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura9.png" alt="miniatura9">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura10.png" alt="miniatura10">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura11.png" alt="miniatura11">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura12.png" alt="miniatura12">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
                     </ol>
+
+                    <button type="button">Mostrar mais</button>
 
                 </section>
 
@@ -200,8 +256,65 @@
                                 </figure>
                             </a>
                         </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura7.png" alt="miniatura7">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura8.png" alt="miniatura8">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura9.png" alt="miniatura9">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura10.png" alt="miniatura10">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura11.png" alt="miniatura11">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="produto.html">
+                                <figure>
+                                    <img src="img/produtos/miniatura12.png" alt="miniatura12">
+                                    <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                                </figure>
+                            </a>
+                        </li>
                         
                     </ol>
+
+                    <button type="button">Mostrar mais</button>
+
                 </section>
 
             </div>
@@ -219,6 +332,8 @@
                 </div>
             </footer>
         
+            <script src="js/jquery.js"></script>
+            <script src="js/home.js"></script>
             <script src="js/banner.js"></script>
 
     </body>
